Add comprehensive logging support for CLI and web modes
- Add SLF4J logging throughout ConversationService with detailed debug info
- Create Logback configuration for file-only logging to logs/application.log
- Log service initialization, message processing, tool execution, and errors
- Increase max tokens to 4K for larger responses
- Maintain clean CLI output while capturing detailed logs for debugging

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>